--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>Oreo Clicker!</title>
 </head>
 
-<body>
+<body ontouchstart="">
     <div id="root">Not rendered</div>
     <script src="./App.js"></script>
 </body>
